tests/negative/expr_reify_ternary.lev
// LA-31 Stage 3 §3 — conditional expression is unsupported (E2).
class User { int age; new User(int g) { age = g; } }
string useIt(expr::Expr<(User)=>bool> e) { return "x"; }
console.writeln(useIt((u) => (u.age > 0 ? true : false)));
